tests/invalidTest/typeConvert/test_11.q
# EXPECT type cannot be converted
def uint16 test(){

  uint64* p3 = new sint64[5]
  sint64* p4 = new uint64[5]
  return 0
}

